--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
         <artifactId>tomcat-jsp-api</artifactId>
         <version>${tomcat.version}</version>
     </dependency>
+    <dependency>  
+	  <groupId>org.jsoup</groupId>  
+	  <artifactId>jsoup</artifactId>  
+	  <version>1.13.1</version>  
+	</dependency>  
   </dependencies>
   <build>
     <finalName>embeddedTomcatSampleforSWE432</finalName>
