--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 	  <artifactId>jsoup</artifactId>  
 	  <version>1.13.1</version>  
 	</dependency>  
+	<dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>embeddedTomcatSampleforSWE432</finalName>
